# EnvCap

./: .gitignore  404.html  CHANGELOG.md  EnvCap.cabal  LICENSE  README.md  Syntax_Guide_ENCAP.rtf  Untitled.rtf  config.cfg  index.html  message copy.txt  sitemap.xml
EnvCap/: EnvCap.cabal
EnvCap/app/: Main.hs
EnvCap/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
EnvCap/src/: AST.hs  Core.hi  Core.hs  CoreInterpreter.hs  CoreTranslator.hs  Environment.hs  Error.hs  Interpreter.hs  Lexer.hs  Main.hs  Parser.hs
EnvCap/src/LambdaE/: Check.hs  Eval.hs  Syntax.hs  Types.hs
EnvCap/test/: Spec.hs  syntaxTests.hs  typeTests.hs
EnvCap/tests/: InterpreterTests.hs  LexerTests.hs  ParserTests.hs
app/: Main.hs
assets/css/: styles.8ba3e131.css
assets/js/: 0164f0d4.aad67e7b.js  0164f0d4.f067b6e7.js  01a85c17.3a832fee.js  01a85c17.d5960631.js  045b59bf.06b31287.js  045b59bf.b6fb9e69.js  051ee214.169713dc.js  051ee214.4590fd8e.js  074b1648.77c59509.js  074b1648.c62cbad3.js  0ae7a928.12ada31c.js  0b02bd84.3503a839.js  0b02bd84.3b12690f.js  0e384e19.24109ed6.js  0e384e19.8fa035bf.js  0e384e19.d95a28a8.js  14eb3368.ac455a7f.js  14eb3368.f45a1a37.js  17896441.37c7001d.js  17896441.7c516a06.js  17896441.ec62d342.js  18c41134.44b79568.js  18c41134.533de2db.js  18c41134.75a68982.js  1a960349.a442c75d.js  1a960349.e3087902.js  1cd3bff0.bd0d3239.js  1df93b7f.184537ba.js  1e4232ab.2e3aaecb.js  1e4232ab.8c437d94.js  1e4232ab.e6e5ac31.js  1f391b9e.099a20e2.js  1f391b9e.76297cfa.js  1f391b9e.b38c49ce.js  3042.0ce7cf22.js  3042.fbec4f3f.js  32e4f501.eeab0528.js  33fc5bb8.5aac9f1e.js  33fc5bb8.f940485e.js  341.3b5eacf1.js  (+125 more)
blog/: atom.xml  index.html  rss.xml
blog/archive/: index.html
blog/authors/: index.html
blog/authors/all-sebastien-lorber-articles/: index.html
blog/authors/yangshun/: index.html
blog/first-blog-post/: index.html
blog/long-blog-post/: index.html
blog/mdx-blog-post/: index.html
blog/tags/: index.html
blog/tags/docusaurus/: index.html
blog/tags/facebook/: index.html
blog/tags/hello/: index.html
blog/tags/hola/: index.html
blog/welcome/: index.html
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
docs/category/tutorial---basics/: index.html
docs/category/tutorial---extras/: index.html
docs/intro/: index.html
docs/syntax/: index.html
docs/tutorial-basics/congratulations/: index.html
docs/tutorial-basics/create-a-blog-post/: index.html
docs/tutorial-basics/create-a-document/: index.html
docs/tutorial-basics/create-a-page/: index.html
docs/tutorial-basics/deploy-your-site/: index.html
envcap/: CHANGELOG.md  README.md  hello.ep  language-configuration.json  package.json  vsc-extension-quickstart.md
envcap-docs/: docusaurus.config.js  package-lock.json  package.json
envcap-docs/docs/: syntax.md
envcap-docs/src/components/: Playground.js
envcap-proj/: docusaurus.config.ts  package-lock.json  package.json  tailwind.config.js
envcap/syntaxes/: ep.tmLanguage.json
examples/ADT/: Area.ep  TyAliases.ep  TyAliases.epi  Variants.ep  Variants.epi
examples/Basic/: Arithmetic.ep  Conditional.ep
examples/Capabilities/: B.ep  B.epi
examples/Core/: Arithmetic.hs  Factorial.hs  Fibonacci.hs  Lists.hs  Recursion.hs  Sort.hs
examples/Environments/: Environments.ep  MergesTest.ep
examples/Functions/: Anonymous.ep
examples/Interfaces1/: A.epi  B.epi  C.epi  D.epi
examples/Letbindings/: LetBindingsPLDI.ep  Letbindings1.ep  Letbindings2.ep  SEPCOMP.ep
examples/Lists/: Example1.ep  Example2.ep
examples/Modules/: Modules1.ep  Modules2.ep  Modules3.ep
examples/Recursion/: CheckPrime.ep  Factorial.ep  Factorial.epi
examples/SepComp/: Module1.ep  Module1.epi  Module2.epi  Module3.ep  Module3.epi
examples/SepComp1/: Lib.ep  Main.ep  Main.epi  Utils.ep  Utils.epi  test.ap
examples/SortingLib/: Listutils.epi  Main.ep  Main.epi  QuickSort.epi
examples/Source/: Anonymous.ep  Arithmetic.ep  CheckPrime.ep  Conditional.ep  Environments.ep  Factorial.ep  Fibonacci.ep  FirstClassFunction.ep  Functions.ep  Lambda.ep  Letbindings.ep  Letbindings1.ep  Letbindings2.ep  Letbindings3.ep  Modules1.ep  Modules2.ep  Recursion.ep  Test1.ep  TyAliases.ep  Variants.ep  hello.ep  module1.ep  modules.ep
formalization/: Formalization.lean  Main.lean  README.md  lake-manifest.json  lakefile.toml
formalization/Formalization/: Syntax.lean
jhtan/coq/: .CoqSrc.mk.d  LibTactics.glob  LibTactics.vo  _CoqProject
markdown-page/: index.html
ott/: ENVCAP.ott  ENVCAP.text  LambdaE.ott  Makefile  compilation.ott  doc.mng  doc.tex  envcap.tex  fiplus.ott  ott.tex  ottalt.sty  test10.tex
ott/ENVCAP/: syntax1.ott
ott/temp/: test10.ott  test10.tex  test10.v
paper/: README.md
playground/: index.html
playground/frontend/: index.html  script.js
proofs/: CoqSrc.mk  CoqSrc.mk.conf  Makefile  _CoqProject  basics.v
proofs/Coq/: #basics.v#  CoqSrc.mk  _CoqProject  basics.v
proofs/PBT_testing/: Elaboration.hs
proofs/core/: CoqSrc.mk.conf  LibTactics.v  basics.v
src/: Design.md  Rules.MD
src/Core/: Evaluator.hs  Rules.MD  Semantics.hs  Step.hs  Syntax.hs  TypeChecker.hs  Util.hs  temp.hs
src/ENVCAP/: Interface.hs  Interpreter.hs  Repl.hs  Sepcomp.hs  Syntax.hs  Utils.hs
src/LambdaE/: BigStep.hs  Check.hs  Eval.hs  SmallStep.hs  Syntax.hs  TypeChecker.hs  TypeSystem.hs  Types.hs
src/Parser/: Arith.hs  Lexer.hs  Parser.hs  Tokens.hs  Util.hs
src/Source/: Desugar.hs  Syntax.hs  Typing.hs  grammar.text
src/Surface/: BNF  Desugar.hs  Syntax.hs  Translation.hs
test/: DesugarSpec.hs  ElaborationSpec.hs  EvaluateSpec.hs  IntegrationSpec.hs  LocallyNamelessSpec.hs  ParseSpec.hs  Spec.hs  TypeExpansionSpec.hs  bigStepTests.hs  syntaxTests.hs  typeCheckerTests.hs  typeTests.hs
test/PBT/: Arbitrary.hs  Generators.hs  Properties.hs  Util.hs
test/Unit/: ParserTests.hs  SemanticsTests.hs  SyntaxTests.hs  TypeCheckerTests.hs
test/coreTests/: semanticsTests.hs  syntaxTests.hs  typeCheckerTests.hs
(+171 files in other folders)
