cabal-version:      2.4
name:               EnvCap
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             jam-khan
maintainer:         jamkhan@connect.hku.hk

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md
library
    exposed-modules:    ENVCAP.Interpreter ENVCAP.Parser.Util ENVCAP.Parser.Parser ENVCAP.Parser.Happy ENVCAP.Core.Evaluator ENVCAP.Core.Syntax ENVCAP.Core.TypeChecker ENVCAP.Core.Utit ENVCAP.Core.Step ENVCAP.Core.PrettyPrint ENVCAP.Source.Syntax PBT.Util
    
    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0,
                      QuickCheck,
                      parsec,
                      megaparsec,
                      parser-combinators >=1.3.0,
                      array
    hs-source-dirs:   src, test, examples
    default-language: Haskell2010

executable EnvCap
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        EnvCap

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite tests-Syntax
    type: exitcode-stdio-1.0
    main-is: SyntaxTests.hs
    hs-source-dirs: Test/Unit, Test/PBT
    build-depends:  base >= 4.7 && <5,
                    hspec,
                    EnvCap,
                    QuickCheck
    default-language: Haskell2010

test-suite tests-Eval
    type: exitcode-stdio-1.0
    main-is: SemanticsTests.hs
    hs-source-dirs: Test/Unit, Test/PBT
    build-depends:  base >= 4.7 && <5,
                    hspec,
                    EnvCap,
                    QuickCheck
    default-language: Haskell2010

test-suite tests-TypeChecker
    type: exitcode-stdio-1.0
    main-is: TypeCheckerTests.hs
    hs-source-dirs: Test/Unit, Test/PBT
    build-depends:  base >= 4.7 && <5,
                    hspec,
                    EnvCap,
                    QuickCheck
    default-language: Haskell2010

test-suite tests-Parser
    type: exitcode-stdio-1.0
    main-is: ParserTests.hs
    hs-source-dirs: Test/Unit
    build-depends:  base >= 4.7 && <5,
                    hspec,
                    EnvCap,
                    parsec,
                    QuickCheck
    default-language: Haskell2010

test-suite tests-PBT
    type: exitcode-stdio-1.0
    main-is: Properties.hs
    hs-source-dirs: Test/PBT
    build-depends:  base >= 4.7 && <5,
                    hspec,
                    EnvCap,
                    QuickCheck
    default-language: Haskell2010