cabal-version:      2.4
name:               EnvCap
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             jam-khan
maintainer:         jamkhan@connect.hku.hk

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md
library my-lib
    maintainer
--     exposed-modules
library
    exposed-modules:    ENVCAP.Interpreter ENVCAP.Utils ENVCAP.Repl ENVCAP.Syntax
                        ENVCAP.Source.Desugar   ENVCAP.Source.Errors ENVCAP.Source.LocallyNameless ENVCAP.Source.TypeExpansion
                        ENVCAP.Manager.Interface ENVCAP.Manager.Implementation ENVCAP.Manager.Manage ENVCAP.Manager.Resolve
                        ENVCAP.Parser.Implementation.ParseImp ENVCAP.Parser.Interface.ParseInterface 
                        ENVCAP.Core.Evaluator ENVCAP.Core.TypeChecker
                        ENVCAP.Core.Step ENVCAP.Source.Elaboration
    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0,
                      QuickCheck,
                      parsec,
                      megaparsec,
                      parser-combinators >=1.3.0,
                      array,
                      containers,
                      text,
                      haskeline >= 0.8,
                      filepath,
                      directory,
                      configurator,
                      bytestring,
                      binary,
                      mtl
    hs-source-dirs:   src, test, examples
    ghc-options:      -Wall
    default-language: Haskell2010

executable EnvCap
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        EnvCap
    
    hs-source-dirs:   app
    default-language: Haskell2010


test-suite tests
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test
    build-depends:  base >= 4.7 && <5,
                    hspec,
                    filepath,
                    EnvCap,
                    QuickCheck
    default-language: Haskell2010
